Made the appropriate changes for OTAP

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
     <url>https://github.com/wakaleo/game-of-life</url>
     <properties>
         <build.number>SNAPSHOT</build.number>
+        <!-- Input Parameter - GlassFish properties file -->
+        <glassfish.properties.file.argument></glassfish.properties.file.argument>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <easyb.version>1.4</easyb.version>
         <cobertura.version>2.6</cobertura.version>
@@ -141,6 +143,31 @@
                     <environment>${jelastic.environment}</environment>
                     <api_hoster>app.jelastic.servint.net</api_hoster>
                 </configuration>
+            </plugin>
+            
+            <plugin>
+                <groupId>org.glassfish.maven.plugin</groupId>
+                <artifactId>maven-glassfish-plugin</artifactId>
+                <version>2.1</version>
+                <configuration>
+                    <glassfishDirectory>${GLASSFISH_HOME}</glassfishDirectory>
+                    <user>${glassfish.user}</user>
+                    <passwordFile>${basedir}/passwords/${glassfish.pwdfile}</passwordFile>
+                    <echo>true</echo>
+                    <debug>true</debug>
+                    <terse>true</terse>
+                    <domain>
+                        <name>${glassfish.domain}</name>
+                        <host>${glassfish.host}</host>
+                        <adminPort>${glassfish.adminport}</adminPort>
+                    </domain>
+                    <components>
+                        <component>
+                            <name>${project.artifactId}</name>
+                            <artifact>${project.build.directory}/${project.build.finalName}.war</artifact>
+                        </component>
+                    </components>
+                </configuration>  
             </plugin>
 
         </plugins>
