Additional changes for deployment

--- a/properties/production.properties
+++ b/properties/production.properties
@@ -1,6 +1,6 @@
 # production domain properties file
 glassfish.domain=production
-glassfish.host=glassfish4-app-server
+glassfish.host=localhost
 glassfish.adminport=7070
-glassfish.user=admin
+glassfish.user=anonymous
 glassfish.pwdfile=pwdfile_production
