--- a/properties/development.properties
+++ b/properties/development.properties
@@ -1,6 +1,6 @@
 # development domain properties file
 glassfish.domain=development
-glassfish.host=glassfish4-app-server
+glassfish.host=localhost
 glassfish.adminport=5050
-glassfish.user=admin
+glassfish.user=anonymous
 glassfish.pwdfile=pwdfile_development
